<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_agent_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context="com.medcords.mhcpanel.activities.AgentLoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone"
        android:layout_height="wrap_content" />


    <include
        android:id="@+id/otp_layout"
        android:visibility="gone"
        layout="@layout/dialog_otp"/>

    <RelativeLayout
        android:id="@+id/login_layout"
        android:visibility="visible"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_mobile"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/margin_phone_layout_login"
            android:layout_marginRight="@dimen/margin_phone_layout_login"
            app:errorTextAppearance="@style/error_appearance"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@color/white"
                android:background="@drawable/apptheme_edit_text_holo_light"
                android:singleLine="true"
                android:maxLength="10"
                android:textSize="@dimen/text_size_medium"
                android:textColorHint="@color/white"
                android:hint="@string/hint_mobile" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_below="@+id/input_layout_mobile"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/margin_phone_layout_login"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_small"
            android:layout_marginRight="@dimen/margin_phone_layout_login"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/text_size_small"
            android:layout_below="@+id/login_button"
            android:id="@+id/signup_text_view"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/signup_text"
            android:layout_height="wrap_content" />


    </RelativeLayout>

</RelativeLayout>
