<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_patient_actions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="com.medcords.mhcpanel.activities.PatientActionsActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.medcords.mhcpanel.activities.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="0dp">

            <ImageButton
                android:layout_width="@dimen/circle_action_item_dimension_small"
                android:id="@+id/share_records_button"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_button"
                android:src="@mipmap/file_grey"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_height="@dimen/circle_action_item_dimension_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_records_text"
                android:layout_below="@+id/share_records_button"
                android:textSize="@dimen/text_size_medium"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@color/colorTextPrimary"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/colorDivider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="0dp">

            <ImageButton
                android:layout_width="@dimen/circle_action_item_dimension_small"
                android:id="@+id/upload_records_button"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_button"
                android:src="@mipmap/upload_grey"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_height="@dimen/circle_action_item_dimension_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_records_text"
                android:layout_below="@+id/upload_records_button"
                android:textSize="@dimen/text_size_medium"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@color/colorTextPrimary"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/colorDivider"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_height="0dp">

            <ImageButton
                android:layout_width="@dimen/circle_action_item_dimension_small"
                android:id="@+id/edit_patient_button"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_button"
                android:src="@mipmap/edit_grey"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_height="@dimen/circle_action_item_dimension_small" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_patient_details_text"
                android:layout_below="@+id/edit_patient_button"
                android:textSize="@dimen/text_size_medium"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:textColor="@color/colorTextPrimary"
                android:layout_centerHorizontal="true"/>

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>
